package service

import (
	"context"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	pb "scheduler/proto/gen"
)

// SchedulerService implements the gRPC SchedulerService interface
type SchedulerService struct {
	pb.UnimplementedSchedulerServiceServer
	// TODO: Add dependencies like containerD client, database, etc.
}

// NewSchedulerService creates a new instance of the scheduler service
func NewSchedulerService() *SchedulerService {
	return &SchedulerService{}
}

// CreateEnvironment creates a new environment based on the specification
func (s *SchedulerService) CreateEnvironment(ctx context.Context, req *pb.CreateEnvironmentRequest) (*pb.CreateEnvironmentResponse, error) {
	// TODO: Implement environment creation logic
	// For now, return a stub response
	return nil, status.Errorf(codes.Unimplemented, "CreateEnvironment not yet implemented")
}

// GetEnvironment retrieves an environment by ID
func (s *SchedulerService) GetEnvironment(ctx context.Context, req *pb.GetEnvironmentRequest) (*pb.GetEnvironmentResponse, error) {
	// TODO: Implement environment retrieval logic
	return nil, status.Errorf(codes.Unimplemented, "GetEnvironment not yet implemented")
}

// UpdateEnvironment updates an existing environment
func (s *SchedulerService) UpdateEnvironment(ctx context.Context, req *pb.UpdateEnvironmentRequest) (*pb.UpdateEnvironmentResponse, error) {
	// TODO: Implement environment update logic
	return nil, status.Errorf(codes.Unimplemented, "UpdateEnvironment not yet implemented")
}

// DeleteEnvironment deletes an environment by ID
func (s *SchedulerService) DeleteEnvironment(ctx context.Context, req *pb.DeleteEnvironmentRequest) (*pb.DeleteEnvironmentResponse, error) {
	// TODO: Implement environment deletion logic
	return nil, status.Errorf(codes.Unimplemented, "DeleteEnvironment not yet implemented")
}

// ListEnvironments lists all environments with pagination
func (s *SchedulerService) ListEnvironments(ctx context.Context, req *pb.ListEnvironmentsRequest) (*pb.ListEnvironmentsResponse, error) {
	// TODO: Implement environment listing logic
	return nil, status.Errorf(codes.Unimplemented, "ListEnvironments not yet implemented")
}

// StartEnvironment starts an existing environment
func (s *SchedulerService) StartEnvironment(ctx context.Context, req *pb.StartEnvironmentRequest) (*pb.StartEnvironmentResponse, error) {
	// TODO: Implement environment start logic
	return nil, status.Errorf(codes.Unimplemented, "StartEnvironment not yet implemented")
}

// StopEnvironment stops a running environment
func (s *SchedulerService) StopEnvironment(ctx context.Context, req *pb.StopEnvironmentRequest) (*pb.StopEnvironmentResponse, error) {
	// TODO: Implement environment stop logic
	return nil, status.Errorf(codes.Unimplemented, "StopEnvironment not yet implemented")
}

// RestartEnvironment restarts an environment
func (s *SchedulerService) RestartEnvironment(ctx context.Context, req *pb.RestartEnvironmentRequest) (*pb.RestartEnvironmentResponse, error) {
	// TODO: Implement environment restart logic
	return nil, status.Errorf(codes.Unimplemented, "RestartEnvironment not yet implemented")
}

// GetEnvironmentStatus retrieves the current status of an environment
func (s *SchedulerService) GetEnvironmentStatus(ctx context.Context, req *pb.GetEnvironmentStatusRequest) (*pb.GetEnvironmentStatusResponse, error) {
	// TODO: Implement environment status retrieval logic
	return nil, status.Errorf(codes.Unimplemented, "GetEnvironmentStatus not yet implemented")
}

// GetEnvironmentLogs streams logs from an environment
func (s *SchedulerService) GetEnvironmentLogs(req *pb.GetEnvironmentLogsRequest, stream pb.SchedulerService_GetEnvironmentLogsServer) error {
	// TODO: Implement log streaming logic
	return status.Errorf(codes.Unimplemented, "GetEnvironmentLogs not yet implemented")
}
